lib/bindings.rs

extern "C" {
    #[doc = " CH34xEppWrite - write data or addr in parrallel EPP mode\n @fd: file descriptor of device\n @iBuffer: pointer to write buffer\n @ioLength: write length\n @PipeMode: 0->write pipe0 data, 1->write pipe1 addr\n\n The function return 0 if successful, others if fail."]
    pub fn CH34xEppWrite(
        fd: ::std::os::raw::c_int,
        iBuffer: *mut u8,
        ioLength: u32,
        PipeMode: u8,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " CH34xEppWriteData - write data in parrallel EPP mode\n @fd: file descriptor of device\n @iBuffer: pointer to write buffer\n @ioLength: write length\n\n The function return 0 if successful, others if fail."]
    pub fn CH34xEppWriteData(
        fd: ::std::os::raw::c_int,
        iBuffer: *mut u8,
        ioLength: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " CH34xEppReadData - read data in parrallel EPP mode\n @fd: file descriptor of device\n @oBuffer: pointer to read buffer\n @ioLength: read length\n\n The function return 0 if successful, others if fail."]
    pub fn CH34xEppReadData(
        fd: ::std::os::raw::c_int,
        oBuffer: *mut u8,
        ioLength: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " CH34xEppWriteAddr - write addr in parrallel EPP mode\n @fd: file descriptor of device\n @iBuffer: pointer to write buffer\n @ioLength: write length\n\n The function return 0 if successful, others if fail."]
    pub fn CH34xEppWriteAddr(
        fd: ::std::os::raw::c_int,
        iBuffer: *mut u8,
        ioLength: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " CH34xEppReadAddr - read addr in parrallel EPP mode\n @fd: file descriptor of device\n @oBuffer: pointer to read buffer\n @ioLength: read length\n\n The function return 0 if successful, others if fail."]
    pub fn CH34xEppReadAddr(
        fd: ::std::os::raw::c_int,
        oBuffer: *mut u8,
        ioLength: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " CH34xEppSetAddr - set addr in parrallel EPP mode\n @fd: file descriptor of device\n @iAddr: addr data\n\n The function return 0 if successful, others if fail."]
    pub fn CH34xEppSetAddr(fd: ::std::os::raw::c_int, iAddr: u32) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " CH34xSetTimeout - set USB data read and write timeout\n @fd: file descriptor of device\n @iWriteTimeout: data download timeout in milliseconds\n @iReadTimeout: data upload timeout in milliseconds\n\n The function return true if successful, false if fail."]
    pub fn CH34xSetTimeout(
        fd: ::std::os::raw::c_int,
        iWriteTimeout: u32,
        iReadTimeout: u32,
    ) -> bool;
}
extern "C" {
    #[doc = " CH34xInitMEM - initial chip in parrallel MEM mode\n @fd: file descriptor of device\n\n The function return true if successful, false if fail."]
    pub fn CH34xInitMEM(fd: ::std::os::raw::c_int) -> bool;
}
extern "C" {
    #[doc = " CH34xMEMReadData - read data in parrallel MEM mode\n @fd: file descriptor of device\n @oBuffer: pointer to read buffer\n @ioLength: read length\n @PipeMode: 0->read pipe0, 1->read pipe1\n\n The function return 0 if successful, others if fail."]
    pub fn CH34xMEMReadData(
        fd: ::std::os::raw::c_int,
        oBuffer: *mut u8,
        ioLength: u32,
        PipeMode: u8,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " CH34xMEMWriteData - write data in parrallel MEM mode\n @fd: file descriptor of device\n @iBuffer: pointer to write buffer\n @ioLength: write length\n @PipeMode: 0->write pipe0, 1->write pipe1\n\n The function return 0 if successful, others if fail."]
    pub fn CH34xMEMWriteData(
        fd: ::std::os::raw::c_int,
        iBuffer: *mut u8,
        ioLength: u32,
        PipeMode: u32,
    ) -> ::std::os::raw::c_int;
}
extern "C" {
    #[doc = " CH34xSetStream - configure spi/i2c interface in stream mode\n @fd: file descriptor of device\n @Mode: stream mode\n ->bit0~1: set I2C SCL rate\n \t\t\t   --> 00 :\tlow rate 20KHz\n \t\t\t   --> 01 : standard rate 100KHz\n \t\t\t   --> 10 : fast rate 400KHz\n \t\t\t   --> 11 : high rate 750KHz\n ->bit2: set spi mode\n \t\t\t   --> 0 : one in one out(D3: clk, D5: out, D7: in)\n \t\t\t   --> 1 : two in two out(D3 :clk, D4/D5: out, D6/D7 :in)\n ->bit7: set spi data mode\n \t\t\t   --> 0 : low bit first\n       \t   --> 1 : high bit first\n other bits must keep 0\n\n The function return true if successful, false if fail."]
    pub fn CH34xSetStream(fd: ::std::os::raw::c_int, Mode: u8) -> bool;
}
extern "C" {
    #[doc = " CH34xSetDelaymS - delay operation\n @fd: file descriptor of device\n @iDelay: delay time in millseconds\n\n The function return true if successful, false if fail."]
    pub fn CH34xSetDelaymS(fd: ::std::os::raw::c_int, iDelay: u32) -> bool;
}
extern "C" {
    #[doc = " CH34xReadData - read for spi/i2c operation\n @fd: file descriptor of device\n @oReadBuffer: pointer to read buffer\n @oReadLength: pointer to read length\n\n The function return true if successful, false if fail."]
    pub fn CH34xReadData(
        fd: ::std::os::raw::c_int,
        oReadBuffer: *mut ::std::os::raw::c_void,
        oReadLength: *mut u32,
    ) -> bool;
}
extern "C" {
    #[doc = " CH34xWriteData - write data for spi/i2c operation\n @fd: file descriptor of device\n @iWriteBuffer: pointer to write buffer\n @iWriteLength: pointer to write length\n\n The function return true if successful, false if fail."]
    pub fn CH34xWriteData(
        fd: ::std::os::raw::c_int,
        iWriteBuffer: *mut ::std::os::raw::c_void,
        iWriteLength: *mut u32,
    ) -> bool;
}
extern "C" {
    #[doc = " CH34xWriteRead - write data then read for spi/i2c operation\n @fd: file descriptor of device\n @iWriteLength: write length\n @iWriteBuffer: pointer to write buffer\n @iReadStep: per read length\n @iReadTimes: read times\n @oReadLength: pointer to read length\n @oReadBuffer: pointer to read buffer\n\n The function return true if successful, false if fail."]
    pub fn CH34xWriteRead(
        fd: ::std::os::raw::c_int,
        iWriteLength: u32,
        iWriteBuffer: *mut ::std::os::raw::c_void,
        iReadStep: u32,
        iReadTimes: u32,
        oReadLength: *mut u32,
        oReadBuffer: *mut ::std::os::raw::c_void,
    ) -> bool;
}
extern "C" {
    #[doc = " CH34xSetOutput - set direction and output data of CH341\n @iEnbale: set direction and data enable\n \t\t\t   --> Bit16 High :\teffect on Bit15~8 of iSetDataOut\n \t\t\t   --> Bit17 High :\teffect on Bit15~8 of iSetDirOut\n \t\t\t   --> Bit18 High :\teffect on Bit7~0 of iSetDataOut\n \t\t\t   --> Bit19 High :\teffect on Bit7~0 of iSetDirOut\n\t\t\t   --> Bit20 High :\teffect on Bit23~16 of iSetDataOut\n @iSetDirOut: set io direction\n\t\t\t  -- > Bit High : Output\n\t\t\t  -- > Bit Low : Input\n @iSetDataOut: set io data\n \t\t\t Output:\n\t\t\t  -- > Bit High : High level\n\t\t\t  -- > Bit Low : Low level\n Note:\n Bit7~Bit0<==>D7-D0, Bit8<==>ERR#, Bit9<==>PEMP, Bit10<==>INT#\n Bit11<==>SLCT, Bit13<==>WAIT#, Bit14<==>DATAS#/READ#, Bit15<==>ADDRS#/ADDR/ALE\n\n The pins below can only be used in output mode:\n Bit16<==>RESET#, Bit17<==>WRITE#, Bit18<==>SCL, Bit29<==>SDA\n\n The function return true if successful, false if fail."]
    pub fn CH34xSetOutput(
        fd: ::std::os::raw::c_int,
        iEnable: u32,
        iSetDirOut: u32,
        iSetDataOut: u32,
    ) -> bool;
}
extern "C" {
    #[doc = " CH34xSet_D5_D0 - set direction and output data of D5-D0 on CH341\n @fd: file descriptor of device\n @iSetDirOut: set io direction\n\t\t\t  -- > Bit High : Output\n\t\t\t  -- > Bit Low : Input\n @iSetDataOut: set io data\n \t\t\t Output:\n\t\t\t  -- > Bit High : High level\n\t\t\t  -- > Bit Low : Low level\n\n The function return true if successful, false if fail."]
    pub fn CH34xSet_D5_D0(fd: ::std::os::raw::c_int, iSetDirOut: u8, iSetDataOut: u8) -> bool;
}
extern "C" {
    #[doc = " CH34xStreamI2C - write/read i2c in stream mode\n @fd: file descriptor of device\n @iWriteLength: write length\n @iWriteBuffer: pointer to write buffer\n @iReadLength: read length\n @oReadBuffer: pointer to read buffer\n\n The function return true if successful, false if fail."]
    pub fn CH34xStreamI2C(
        fd: ::std::os::raw::c_int,
        iWriteLength: u32,
        iWriteBuffer: *mut ::std::os::raw::c_void,
        iReadLength: u32,
        oReadBuffer: *mut ::std::os::raw::c_void,
    ) -> bool;
}
extern "C" {
    #[doc = " CH34xReadEEPROM - read data from eeprom\n @fd: file descriptor of device\n @iEepromID: eeprom type\n @iAddr: address of eeprom\n @iLength: read length\n @oBuffer: pointer to read buffer\n\n The function return true if successful, false if fail."]
    pub fn CH34xReadEEPROM(
        fd: ::std::os::raw::c_int,
        iEepromID: EEPROM_TYPE,
        iAddr: u32,
        iLength: u32,
        oBuffer: *mut u8,
    ) -> bool;
}
extern "C" {
    #[doc = " CH34xWriteEEPROM - write data to eeprom\n @fd: file descriptor of device\n @iEepromID: eeprom type\n @iAddr: address of eeprom\n @iLength: write length\n @iBuffer: pointer to write buffer\n\n The function return true if successful, false if fail."]
    pub fn CH34xWriteEEPROM(
        fd: ::std::os::raw::c_int,
        iEepromID: EEPROM_TYPE,
        iAddr: u32,
        iLength: u32,
        iBuffer: *mut u8,
    ) -> bool;
}
extern "C" {
    #[doc = " CH34xStreamSPIx - write/read spi in stream mode\n @fd: file descriptor of device\n @iChipSelect: cs enable\n @iLength: the length of data\n @ioBuffer: one in one out buffer\n @ioBuffer2: two in two out buffer\n\n The function return true if successful, false if fail."]
    pub fn CH34xStreamSPIx(
        fd: ::std::os::raw::c_int,
        iChipSelect: u32,
        iLength: u32,
        ioBuffer: *mut ::std::os::raw::c_void,
        ioBuffer2: *mut ::std::os::raw::c_void,
    ) -> bool;
}
extern "C" {
    #[doc = " CH34xStreamSPI4 - write/read spi in 4-line stream mode\n @fd: file descriptor of device\n @iChipSelect: cs enable\n @iLength: the length of data\n @ioBuffer: one in one out buffer\n\n The function return true if successful, false if fail."]
    pub fn CH34xStreamSPI4(
        fd: ::std::os::raw::c_int,
        iChipSelect: u32,
        iLength: u32,
        ioBuffer: *mut ::std::os::raw::c_void,
    ) -> bool;
}
#[repr(C, packed)]
#[derive(Debug, Copy, Clone)]
pub struct _SPI_CONFIG {
    pub iMode: u8,
    pub iClock: u8,
    pub iByteOrder: u8,
    pub iSpiWriteReadInterval: u16,
    pub iSpiOutDefaultData: u8,
    pub iChipSelect: u32,
    pub CS1Polarity: u8,
    pub CS2Polarity: u8,
    pub iIsAutoDeativeCS: u16,
    pub iActiveDelay: u16,
    pub iDelayDeactive: u32,
}
